--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <h1>This is by Karmjit </h1>
 
   <header>
     <h1>🍳 RecipeJS</h1>
