Part 3: Expandable recipe cards with recursion and IIFE

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>RecipeJS - Your Functional Cooking Companion</title>
+  <title>RecipeJS - Functional Cooking Companion</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -32,7 +32,7 @@
 
     <!-- Recipes -->
     <div id="recipe-container">
-      <!-- Recipe cards rendered by JavaScript -->
+      <!-- Rendered by JS -->
     </div>
   </main>
 
